--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  geolocator: ^10.1.0
-  http: ^1.1.0
-  flutter_spinkit: ^5.2.0
-  flutter_svg: ^2.0.9
+  geolocator: ^12.0.0
+  http: ^1.2.1
+  flutter_spinkit: ^5.2.1
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
